# wcpan.drive.feed

./: LICENSE.txt  README.md  example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/wcpan/drive/feed/: __init__.py  __main__.py  _app.py  _backfill.py  _db.py  _exclude.py  _handlers.py  _keys.py  _lib.py  _main.py  _metadata.py  _scanner.py  _types.py  _watcher.py  _workers.py
src/wcpan/drive/feed/_watcher/: __init__.py  _backend.py  _fanotify.py  _inotify.py  _lib.py
tests/: _lib.py  test_db.py  test_handlers.py  test_inotify.py  test_metadata.py  test_scanner.py  test_watcher.py
